Add an option to hide auto login checkbox along with the save password box https://igniterealtime.org/issues/browse/SPARK-1644

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -8,7 +8,7 @@ APPLICATION_NAME = Spark
 SHORT_NAME = Spark
 
 ############# Auto Set During Build #############
-APPLICATION_VERSION = 2.7.2
+APPLICATION_VERSION = 2.7.3
 # Passed into ant via cmd line argument:
 #   -Dbuild.number=<build number>
 # If not passed in, this field is ignored.
@@ -66,8 +66,8 @@ PROXY_DISABLED = false
 PASSWORD_RESET_ENABLED = false
 # URL to your password reset html 
 PASSWORD_RESET_URL = 
-# Hides Save Password checkbox on the Login screen and in the Preferences
-HIDE_SAVE_PASSWORD = false
+# Hides Save Password and Auto Login checkboxes on the Login screen and in the Preferences
+HIDE_SAVE_PASSWORD_AND_AUTOLOGIN = false
 
 # Branding only
 # Branded images appear in the Top-Right corner, and must be included in the classpath
