Change "on phone" to "on the phone"  This correct some grammar that was bugging me, and will use the phone icon when asterisk-im changes statues.

--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n.properties
@@ -82,7 +82,7 @@ phone.transferring = Transferring
 phone.transfered = Transfered
 phone.callstartedat = Call Started at
 phone.callendedat = Call Ended at
-phone.onphonewith = On phone with
+phone.onphonewith = On the phone with
 phone.callendedwith = Call ended with
 phone.previousconversations = Previous Conversations
 phone.closeconfirm = Closing this room will end the call. Continue?
