SPARK-1681 Change the link for User Guide

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -8,7 +8,7 @@ APPLICATION_NAME = Spark
 SHORT_NAME = Spark
 
 ############# Auto Set During Build #############
-APPLICATION_VERSION = 2.7.3
+APPLICATION_VERSION = 2.7.5
 # Passed into ant via cmd line argument:
 #   -Dbuild.number=<build number>
 # If not passed in, this field is ignored.
@@ -139,7 +139,7 @@ CHANGE_PASSWORD_DISABLED =
 
 # Sets the Location of the Userguide
 #Default is http://www.igniterealtime.org/builds/spark/docs/spark_user_guide.pdf
-HELP_USER_GUIDE = http://www.igniterealtime.org/builds/spark/docs/spark_user_guide.pdf
+HELP_USER_GUIDE = https://community.igniterealtime.org/docs/DOC-5213
 # Set to true, if you dont want this displayed
 HELP_USER_GUIDE_DISABLED = 
 # Sets the Location of the Help-Forum
