--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -157,7 +157,7 @@ ERROR_INVALID_WORKGROUP = The workgroup is not valid. Please use a valid workgro
 ERROR_DIALOG_TITLE = Login Error
 INVALID_USERNAME_PASSWORD =  Invalid username or password.
 SERVER_UNAVAILABLE = Can't connect to server: invalid name or server not reachable.
-UNRECOVERABLE_ERROR = Invalid username or password.
+UNRECOVERABLE_ERROR = Unknown connection error. Please review the logs for more information.
 
 #Chat Window Images
 ALERT = images/alert.png
