SPARK-1799 fix spark forums link

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -144,7 +144,7 @@ HELP_USER_GUIDE = https://community.igniterealtime.org/docs/DOC-5213
 HELP_USER_GUIDE_DISABLED = 
 # Sets the Location of the Help-Forum
 #Default is http://www.igniterealtime.org/forum/forum.jspa?forumID=49
-HELP_FORUM = http://www.igniterealtime.org/forum/forum.jspa?forumID=49
+HELP_FORUM = https://community.igniterealtime.org/community/support/spark_support
 # Set to true, if you dont want this displayed
 HELP_FORUM_DISABLED = 
 # Following Text will be displayed instead of "Spark forum"
