--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -8,7 +8,7 @@ APPLICATION_NAME = Spark
 SHORT_NAME = Spark
 
 ############# Auto Set During Build #############
-APPLICATION_VERSION = 2.7.7
+APPLICATION_VERSION = 2.8.1
 # Passed into ant via cmd line argument:
 #   -Dbuild.number=<build number>
 # If not passed in, this field is ignored.
@@ -84,6 +84,32 @@ DISABLE_UPDATES =
 # If true, Spark cannot shut down
 # users wont be able to shut down Spark
 DISABLE_EXIT = 
+
+# If true, hides "Login as invisible" checkbox on the login screen
+HIDE_LOGIN_AS_INVISIBLE = false
+
+# If true, the "Preferences" menu item will be disabled
+DISABLE_PREFERENCES_MENU_ITEM = false
+
+# This allows an administrator to override the DISABLE_PREFERENCES_MENU_ITEM setting
+# The "Preferences" menu item will be enabled when the specified file exists
+# Specify the maintenance path/file here (i.e. \\\\server\\share\\filename.ext) 
+MAINT_FILESPEC = 
+
+# If true, don't allow user to manually change presence status
+DISABLE_PRESENCE_STATUS_BAR = false
+
+# If true, disable the OPEN, HIDE and STATUS options in system tray 
+DISABLE_OPEN_HIDE_STATUS_IN_SYSTRAY = false
+
+# If true, disable the "Broadcast message" menu item
+DISABLE_BROADCAST_MENU_ITEM = false
+
+# If true, remove the AVATAR tab in profile dialog
+DISABLE_AVATAR_TAB = false
+
+# If true, disable the "Plugins" menu item
+DISABLE_PLUGINS_MENU_ITEM = false
 
 #################################################
 ################## File Transfer ################
