SPARK-1822 - Added new settings to disable certain GUI menu items

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -99,8 +99,8 @@ MAINT_FILESPEC =
 # If true, don't allow user to manually change presence status
 DISABLE_PRESENCE_STATUS_BAR = false
 
-# If true, disable the OPEN, HIDE and STATUS options in system tray 
-DISABLE_OPEN_HIDE_STATUS_IN_SYSTRAY = false
+# If true, disable the "Status" option in the system tray
+DISABLE_STATUS_IN_SYSTRAY = false
 
 # If true, disable the "Broadcast message" menu item
 DISABLE_BROADCAST_MENU_ITEM = false
