SPARK-1822 Add additional default properties to control GUI settings

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -94,7 +94,7 @@ DISABLE_PREFERENCES_MENU_ITEM = false
 # This allows an administrator to override the DISABLE_PREFERENCES_MENU_ITEM setting
 # The "Preferences" menu item will be enabled when the specified file exists
 # Specify the maintenance path/file here (i.e. \\\\server\\share\\filename.ext) 
-MAINT_FILESPEC = 
+MAINT_FILESPEC =
 
 # If true, don't allow user to manually change presence status
 DISABLE_PRESENCE_STATUS_BAR = false
@@ -102,7 +102,7 @@ DISABLE_PRESENCE_STATUS_BAR = false
 # If true, disable the "Status" option in the system tray
 DISABLE_STATUS_IN_SYSTRAY = false
 
-# If true, disable the "Broadcast message" menu item
+# If true, disable all "Broadcast" menu items
 DISABLE_BROADCAST_MENU_ITEM = false
 
 # If true, remove the AVATAR tab in profile dialog
