--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -92,20 +92,18 @@ HIDE_LOGIN_AS_INVISIBLE = false
 DISABLE_PREFERENCES_MENU_ITEM = false
 
 # This allows an administrator to override the DISABLE_PREFERENCES_MENU_ITEM setting
-# The "Preferences" menu item will be enabled when the specified file exists
-# Specify the maintenance path/file here (i.e. \\\\server\\share\\filename.ext) 
-MAINT_FILESPEC = 
+# The "Preferences" menu item will become enabled when the specified file exists
+# Specify the maintenance path/file here (i.e. \\\\server\\share\\filename.ext)
+# It is best to place this file on a read-only network share
+MAINT_FILESPEC =
 
 # If true, don't allow user to manually change presence status
-DISABLE_PRESENCE_STATUS_BAR = false
+DISABLE_PRESENCE_STATUS_CHANGE = false
 
-# If true, disable the "Status" option in the system tray
-DISABLE_STATUS_IN_SYSTRAY = false
-
-# If true, disable the "Broadcast message" menu item
+# If true, disable all "Broadcast" menu items
 DISABLE_BROADCAST_MENU_ITEM = false
 
-# If true, remove the AVATAR tab in profile dialog
+# If true, remove the "Avatar" tab in profile dialog
 DISABLE_AVATAR_TAB = false
 
 # If true, disable the "Plugins" menu item
