SPARK-1822 - Add additional default properties to control GUI settings

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -109,6 +109,27 @@ DISABLE_AVATAR_TAB = false
 # If true, disable the "Plugins" menu item
 DISABLE_PLUGINS_MENU_ITEM = false
 
+# If true, disable the option to transfer files
+DISABLE_FILE_XFER = false
+
+# If true, disable the option to remove contacts and groups in roster
+DISABLE_REMOVALS = false
+
+# If true, disable the option to rename contacts and groups in roster
+DISABLE_RENAMES = false
+
+# If true, disable the options to move and copy contacts
+DISABLE_MOVE_AND_COPY = false
+
+# If true, disable the option to edit the profile
+DISABLE_EDIT_PROFILE = false
+
+# If true, disable the "View notes" option under "Actions"
+DISABLE_VIEW_NOTES = false
+
+# If true, disable the "View task list" option under "Actions"
+DISABLE_VIEW_TASK_LIST = false
+
 #################################################
 ################## File Transfer ################
 #################################################
