SPARK-1822 - Add additional default properties to control GUI settings

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -109,11 +109,8 @@ DISABLE_AVATAR_TAB = false
 # If true, disable the "Plugins" menu item
 DISABLE_PLUGINS_MENU_ITEM = false
 
-# If true, disable the option to transfer files
+# If true, disable the option to transfer files and images
 DISABLE_FILE_XFER = false
-
-# If true, disable the option to take screenshots
-DISABLE_SCREENSHOTS = false
 
 # If true, disable the option to remove contacts and groups in roster
 DISABLE_REMOVALS = false
