SPARK-1852: Add anonymous SASL login support

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -88,6 +88,8 @@ DISABLE_EXIT =
 # If true, hides "Login as invisible" checkbox on the login screen
 HIDE_LOGIN_AS_INVISIBLE = false
 
+HIDE_LOGIN_ANONYMOUSLY = false
+
 # If true, the "Preferences" menu item will be disabled
 DISABLE_PREFERENCES_MENU_ITEM = false
 
