--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -351,6 +351,6 @@ REJECT_INVITE_IMAGE = images/reject.png
 INVITE_MORE_IMAGE = images/invitemore.png
 FILTER_LABEL = Search
 
-# Lanuage
+# Language
 LANGUAGE_ICON = images/language_plugin.png
 EXECUTABLE_NAME = Spark.exe
