--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,9 @@
 
     <modules>
         <module>core</module>
-        <module>plugins/roar</module>
+        <!--<module>plugins/battleships</module>-->
         <module>plugins/fastpath</module>
+        <module>plugins/roar</module>
         <module>distribution</module>
     </modules>
 
