SPARK-1791: Moving Growl plugin from Ant to Maven
This plugin probably won't work properly, as it depends on a native library. We would better use one of the Java implementations for the GNTP protocol instead (SPARK-1880), which should improve portability.

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
     <modules>
         <module>core</module>
         <!--<module>plugins/battleships</module>-->
+        <module>plugins/growl</module>
         <module>plugins/fastpath</module>
         <module>plugins/roar</module>
         <module>distribution</module>
