SPARK-1880: Growl plugin should use java binding.
Instead of the old native library that was used, the plugin now makes use of a Java-based API.

--- a/plugins/growl/pom.xml
+++ b/plugins/growl/pom.xml
@@ -23,6 +23,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.jgntp</groupId>
+            <artifactId>jgntp</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
