--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,9 @@
     <modules>
         <module>core</module>
         <!--<module>plugins/battleships</module>-->
-        <module>plugins/growl</module>
+        <module>plugins/apple</module>
         <module>plugins/fastpath</module>
+        <module>plugins/growl</module>
         <module>plugins/roar</module>
         <module>distribution</module>
     </modules>
