SPARK-1791: Moving Reversi plugin from Ant to Maven.

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <module>plugins/apple</module>
         <module>plugins/fastpath</module>
         <module>plugins/growl</module>
+        <module>plugins/reversi</module>
         <module>plugins/roar</module>
         <module>distribution</module>
     </modules>
