SPARK-1791: Moving TicTacToe plugin from Ant to Maven.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>roar</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.spark.plugins</groupId>
+            <artifactId>tictactoe</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
     </dependencies>
 
