SPARK-1791: Moving Flashing plugin from Ant to Maven.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -32,6 +32,11 @@
         </dependency>
         <dependency>
             <groupId>org.igniterealtime.spark.plugins</groupId>
+            <artifactId>flashing</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.spark.plugins</groupId>
             <artifactId>growl</artifactId>
             <version>${project.version}</version>
         </dependency>
