--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -37,6 +37,11 @@
         </dependency>
         <dependency>
             <groupId>org.igniterealtime.spark.plugins</groupId>
+            <artifactId>google</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.spark.plugins</groupId>
             <artifactId>growl</artifactId>
             <version>${project.version}</version>
         </dependency>
