SPARK-1791: Moving TransferGuard plugin from Ant to Maven.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>tictactoe</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.spark.plugins</groupId>
+            <artifactId>transferguard</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
     </dependencies>
 
