--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <module>plugins/reversi</module>
         <module>plugins/roar</module>
         <module>plugins/tictactoe</module>
+        <module>plugins/transferguard</module>
         <module>distribution</module>
     </modules>
 
