SPARK-1791: Moving Translator plugin from Ant to Maven.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>transferguard</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.spark.plugins</groupId>
+            <artifactId>translator</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
     </dependencies>
 
