SPARK-1791: Moving OTR plugin from Ant to Maven.
There's a compatibility issue with the third party otr library that is being used (Maven has a different version than the one that shipped with Spark). I've not included this plugin as a Maven module to prevent build failures.

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>plugins/google</module>
         <module>plugins/growl</module>
         <!--<module>plugins/jingle</module>-->
+        <!--<module>plugins/otr</module>-->
         <module>plugins/reversi</module>
         <module>plugins/roar</module>
         <module>plugins/tictactoe</module>
