--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
         <module>plugins/reversi</module>
         <module>plugins/roar</module>
         <module>plugins/tictactoe</module>
+        <!--<module>plugins/spelling</module>-->
         <module>plugins/transferguard</module>
         <module>plugins/translator</module>
         <module>distribution</module>
