SPARK-1791: Moving SystemTray plugin from Ant to Maven.
The directory in which this plugin lived was named 'linux'. This has been renamed to match the plugin name: 'systemtray'.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -57,6 +57,11 @@
         </dependency>
         <dependency>
             <groupId>org.igniterealtime.spark.plugins</groupId>
+            <artifactId>systemtray</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.spark.plugins</groupId>
             <artifactId>tictactoe</artifactId>
             <version>${project.version}</version>
         </dependency>
