--- a/plugins/jingle/pom.xml
+++ b/plugins/jingle/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.igniterealtime.smack</groupId>
             <artifactId>smack-jingle-old</artifactId>
-            <version>4.1.7</version>
+            <version>${dependency.smack.version}</version>
         </dependency>
     </dependencies>
 
