--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <dependency.smack.version>4.1.9</dependency.smack.version>
     </properties>
 
     <build>
