--- a/plugins/transferguard/pom.xml
+++ b/plugins/transferguard/pom.xml
@@ -1,4 +1,4 @@
-    <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -30,10 +30,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.0.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.igniterealtime.spark.plugins</groupId>
+                        <artifactId>assembly-descriptor</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
-                    <descriptors>
-                        <descriptor>src/assembly/spark-plugin.xml</descriptor>
-                    </descriptors>
+                    <descriptorRefs>
+                        <descriptorRef>spark-plugin</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
                 <executions>
                     <execution>
