--- a/plugins/systemtray/pom.xml
+++ b/plugins/systemtray/pom.xml
@@ -3,13 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.igniterealtime.spark</groupId>
-        <artifactId>parent</artifactId>
+        <groupId>org.igniterealtime.spark.plugins</groupId>
+        <artifactId>plugin</artifactId>
         <version>3.0.0-SNAPSHOT</version>
-        <relativePath>../../</relativePath>
+        <relativePath>../plugin/pom.xml</relativePath>
     </parent>
 
-    <groupId>org.igniterealtime.spark.plugins</groupId>
     <artifactId>systemtray</artifactId>
 
     <name>Spark SystemTray Plugin</name>
@@ -17,49 +16,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.igniterealtime.spark</groupId>
-            <artifactId>spark-core</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.jdesktop</groupId>
             <artifactId>jdic</artifactId>
             <version>0.9.4</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.0.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.igniterealtime.spark.plugins</groupId>
-                        <artifactId>assembly-descriptor</artifactId>
-                        <version>${project.version}</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>spark-plugin</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
     <repositories>
         <repository>
