SPARK-1791: Adding metadata from plugin.xml into pom.xml
The project data from the plugin.xml is used to populate the related fields in the Maven pom.xml.

Also, all plugin version numbers were increased. Although the Mavenization of Spark should not have introduced changes, it can't be ruled out.

--- a/plugins/apple/pom.xml
+++ b/plugins/apple/pom.xml
@@ -10,9 +10,20 @@
     </parent>
 
     <artifactId>apple</artifactId>
+    <version>3.0</version>
 
     <name>Spark Apple Plugin</name>
     <description>Provides Mac OS X features for Spark.</description>
+
+    <contributors>
+        <contributor>
+            <name>Wolf Posdorfer</name>
+            <email>9posdorf@informatik.uni-hamburg.de</email>
+            <roles>
+                <role>Author</role>
+            </roles>
+        </contributor>
+    </contributors>
 
     <dependencies>
         <dependency>
