--- a/plugins/jingle/pom.xml
+++ b/plugins/jingle/pom.xml
@@ -10,9 +10,20 @@
     </parent>
 
     <artifactId>jingle</artifactId>
+    <version>1.1</version>
 
     <name>Spark Jingle Plugin</name>
     <description>Allows for PC to PC calling.</description>
+
+    <contributors>
+        <contributor>
+            <organization>Jive Software</organization>
+            <email>spark@jivesoftware.com</email>
+            <roles>
+                <role>Author</role>
+            </roles>
+        </contributor>
+    </contributors>
 
     <dependencies>
         <dependency>
