--- a/plugins/roar/pom.xml
+++ b/plugins/roar/pom.xml
@@ -10,8 +10,19 @@
     </parent>
 
     <artifactId>roar</artifactId>
+    <version>0.5.0</version>
 
     <name>Spark Roar Plugin</name>
     <description>Provides customizable popup/notification functionality.</description>
+
+    <contributors>
+        <contributor>
+            <name>Wolf Posdorfer</name>
+            <email>9posdorf@informatik.uni-hamburg.de</email>
+            <roles>
+                <role>Author</role>
+            </roles>
+        </contributor>
+    </contributors>
 
 </project>
